Implemented Cards search
Fixed inconsistent test results by changing cards on deckbox test user's
inventory.
